--- a/css/_general.scss
+++ b/css/_general.scss
@@ -359,7 +359,7 @@ end of categories carousel
 
               .day{
                 display: block;
-                border-bottom: solid 2px $dark-primary-color;
+                border-bottom: solid 2px $text-icons-color;
                 font-size: 16px;
               }
               .month{
