--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -135,7 +135,7 @@
       }
       .event_date{
         background-color: $accent-color;
-        color: $gray-0;
+        color: $dark-primary-color;
         padding: 2px 10px;
         display: inline-block;
         text-align: center;
