--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ end of categories carousel
             margin: 0 5px; }
           .body .main-body .section.section-slider .section-body .articles a .event_date .day {
             display: block;
-            border-bottom: solid 2px #0c3b31;
+            border-bottom: solid 2px #fff;
             font-size: 16px; }
           .body .main-body .section.section-slider .section-body .articles a .event_date .month {
             font-size: 10px; }
@@ -1100,7 +1100,7 @@ footer#main-footer {
     margin-bottom: 5px; }
   .page-etablissement .event_list .article .event_date {
     background-color: #df8e00;
-    color: #f8f8f8;
+    color: #0c3b31;
     padding: 2px 10px;
     display: inline-block;
     text-align: center;
@@ -1616,8 +1616,6 @@ span.incdicateur_distance {
       justify-content: center;
       margin-bottom: 5px; }
     .page-etablissement .event_list .article .event_date {
-      background-color: #4d4d4d;
-      color: #f8f8f8;
       padding: 2px 10px;
       display: inline-block;
       text-align: center;
