--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,7 +1,7 @@
 footer#main-footer{
   overflow: hidden;
   padding: 20px 0 15px;
-  background-color: $dark-primary-color;
+  background-color: #2c2c2c;
   color: #fff;
   position: absolute;
   right: 0;
