--- a/css/_general.scss
+++ b/css/_general.scss
@@ -39,7 +39,7 @@ a{
 
   form{
     padding: 15px;
-    background-color: $dark-primary-color;
+    background-color: $light-primary-color;
 
 
     $input_height: 60px;
@@ -73,7 +73,7 @@ a{
     .col-sm-6{
       position: relative;
       .check-button{
-        color: $dark-primary-color;
+        color: $text-icons-color;
         background-color: $primary-color;
       }
 
@@ -85,7 +85,7 @@ a{
       font-weight: 700;
       letter-spacing: 0.5px;
       color: $text-icons-color;
-      background-color: $accent-color;
+      background-color: $primary-color;
       height: $input_height;
       cursor: pointer;
     }
@@ -130,7 +130,7 @@ a{
       position: relative;
       .check-button{
         color: #fff;
-        background-color: $light-primary-color;
+        background-color: $primary-color;
       }
 
     }
@@ -142,7 +142,7 @@ a{
       padding-top: 4px;
       padding-bottom: 4px;
       color: #fff;
-      background-color: $accent-color;
+      background-color: $primary-color;
       height: $input_height;
       cursor: pointer;
     }
@@ -241,7 +241,7 @@ end of categories carousel
             @include transition(0.3s);
           }
           span:hover{
-            background-color: $accent-color;
+            background-color: $primary-color;
             color: #fff;
           }
           .prev:after{
@@ -340,8 +340,8 @@ end of categories carousel
               overflow: hidden;
             }
             .event_date{
-              background-color: $accent-color;
-              color: $dark-primary-color;
+              background-color: $dark-primary-color;
+              color: $text-icons-color;
               padding: 2px 10px;
               display: inline-block;
               text-align: center;
@@ -379,6 +379,11 @@ end of categories carousel
               bottom: -6px;
               z-index: 1;
               @include transform(rotate(-45deg));
+            }
+            @media (max-width: 480px) {
+              .event_date:before{
+                display: none;
+              }
             }
           }
         }
