--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,10 +1,10 @@
 header{
-  background-color: $primary-color ;
+  background-color: $light-primary-color ;
 
   #top-nav-menu{
     overflow: hidden;
     font-size: 13px;
-    color: $text-icons-color;
+    color: $dark-primary-color;
     padding: 10px 0;
     ul{
       margin: 0;
@@ -51,7 +51,7 @@ header{
     padding-bottom: 76px;
   }
   .nav>li>a:focus, .nav>li>a:hover{
-    background-color: $light-primary-color;
+    background-color: $primary-color;
     color: $text-icons-color;
   }
   .navbar{
