--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -2,7 +2,7 @@
   .page-title{
     text-transform: uppercase;
     font-weight: 700;
-    color: $accent-color;
+    color: $primary-color;
     margin-bottom: 30px;
   }
   .months-list{
@@ -52,7 +52,7 @@
         margin-bottom: 5px;
       }
       .event_date{
-        background-color: $accent-color;
+        background-color: $primary-color;
         color: $gray-0;
         padding: 2px 10px;
         display: inline-block;
@@ -146,7 +146,7 @@
           }
         }
         .event_date{
-          background-color: $accent-color;
+          background-color: $dark-primary-color;
           color: $text-icons-color;
           padding: 2px 10px;
           display: inline-block;
@@ -173,7 +173,7 @@
           }
         }
         .article_title{
-          color: $accent-color;
+          color: $dark-primary-color;
           font-weight: 700;
           font-size: 13px;
         }
