--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -8,7 +8,7 @@
     .widget-title{
       text-transform: uppercase;
       font-size: 14px;
-      border-bottom: solid 2px $accent-color;
+      border-bottom: solid 2px $light-primary-color;
       padding-bottom: 8px;
       color: $primary-color;
     }
