--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,9 +6,9 @@ $gray-4: #666666;
 $gray-5: #4d4d4d;
 $gray-6: #333333;
 
-$dark-primary-color: #0c3b31;
-$primary-color: #118c72;
-$light-primary-color: #20504b;
+$dark-primary-color: #2d2d7b;
+$primary-color: #af1e27;
+$light-primary-color: #e6e6e6;
 $text-icons-color: #fff;
 $accent-color: #df8e00;
 $primary-text-color: #212121;
