--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -146,7 +146,7 @@
           }
         }
         .event_date{
-          background-color: $dark-primary-color;
+          background-color: $primary-color;
           color: $text-icons-color;
           padding: 2px 10px;
           display: inline-block;
