--- a/css/style.css
+++ b/css/style.css
@@ -1258,6 +1258,67 @@ span.incdicateur_distance {
       color: #4d4d4d;
       font-weight: 700; }
 
+.modal .modal-content .modal-header {
+  background-color: #af1e27;
+  color: #fff; }
+  .modal .modal-content .modal-header .close {
+    display: inline-block;
+    padding: 5px 10px;
+    opacity: 1;
+    color: #fff; }
+.modal .modal-content .modal-body a {
+  position: relative;
+  width: 50%;
+  padding: 0 1%;
+  margin-bottom: 30px; }
+  .modal .modal-content .modal-body a .article_picture_frame {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .modal .modal-content .modal-body a .article_picture_frame img {
+      width: 100%;
+      display: block; }
+  .modal .modal-content .modal-body a .article_title {
+    color: #333333;
+    font-weight: 700;
+    margin-top: 5px; }
+  .modal .modal-content .modal-body a .article_location,
+  .modal .modal-content .modal-body a .annonceur {
+    color: #666666;
+    font-size: 13px; }
+  .modal .modal-content .modal-body a .annonceur {
+    font-weight: 700; }
+  .modal .modal-content .modal-body a .article_abstract {
+    font-size: 12px;
+    color: #666666;
+    height: 100px;
+    overflow: hidden; }
+  .modal .modal-content .modal-body a .event_date {
+    background-color: #af1e27;
+    color: #fff;
+    padding: 2px 10px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    z-index: 2; }
+    .modal .modal-content .modal-body a .event_date .date {
+      float: left;
+      margin: 0 5px; }
+    .modal .modal-content .modal-body a .event_date .day {
+      display: block;
+      border-bottom: solid 2px #fff;
+      font-size: 16px; }
+    .modal .modal-content .modal-body a .event_date .month {
+      font-size: 10px; }
+
 @media (max-width: 1365px) {
   #google-map .etablissements {
     overflow: hidden;
