--- a/css/style.css
+++ b/css/style.css
@@ -1319,6 +1319,60 @@ span.incdicateur_distance {
     .modal .modal-content .modal-body a .event_date .month {
       font-size: 10px; }
 
+.body.admin {
+  display: flex;
+  flex-direction: row; }
+
+.admin-sidebar {
+  width: 190px;
+  position: relative; }
+  .admin-sidebar .header .dashboard-label {
+    padding: 8px 15px;
+    background-color: #af1e27;
+    display: block;
+    font-weight: 700;
+    color: #fff; }
+  .admin-sidebar .fa {
+    margin-right: 10px; }
+  .admin-sidebar .sidebar-menu {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 13px; }
+    .admin-sidebar .sidebar-menu li a {
+      padding: 9px 15px;
+      display: block;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+    .admin-sidebar .sidebar-menu li a:hover {
+      background-color: #1f1f1f; }
+  .admin-sidebar a {
+    color: #fff; }
+
+.admin-sidebar:after {
+  content: '';
+  display: block;
+  width: 190px;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-color: #2c2c2c;
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.4); }
+
+@media (max-width: 767px) {
+  .body.admin {
+    display: inherit; }
+
+  .admin-sidebar {
+    width: 100%;
+    background-color: #2c2c2c; }
+
+  .admin-sidebar:after {
+    display: none; } }
 @media (max-width: 1365px) {
   #google-map .etablissements {
     overflow: hidden;
