--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -61,6 +61,15 @@
   .admin-sidebar{
     width: 100%;
     background-color: #2c2c2c;
+
+    .sidebar-menu{
+      li{
+        a{
+          padding: 15px;
+          font-size: 14px;
+        }
+      }
+    }
   }
   .admin-sidebar:after{
     display: none;
