--- a/css/style.css
+++ b/css/style.css
@@ -1370,6 +1370,9 @@ span.incdicateur_distance {
   .admin-sidebar {
     width: 100%;
     background-color: #2c2c2c; }
+    .admin-sidebar .sidebar-menu li a {
+      padding: 15px;
+      font-size: 14px; }
 
   .admin-sidebar:after {
     display: none; } }
