--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -32,13 +32,13 @@
         @include transition(0.3s);
       }
       a:hover{
-        background-color: darken(#2c2c2c, 5%);
+        background-color: #f8f8f8;
       }
     }
   }
 
   a{
-    color: #fff;
+    color: #2c2c2c;
   }
 }
 .admin-sidebar:after{
@@ -50,8 +50,18 @@
   left: 0;
   top: 0;
   z-index: -1;
-  background-color: #2c2c2c;
-  box-shadow: 2px 0 10px rgba(#000, 0.4);
+  background-color: #fff;
+  box-shadow: 2px 0 10px rgba(#000, 0.1);
+}
+#admin-footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 10;
+  width: 190px;
+  padding: 5px 15px;
+  background-color: #fff;
+  font-size: 13px;
 }
 
 @media (max-width: 767px) {
@@ -60,7 +70,7 @@
   }
   .admin-sidebar{
     width: 100%;
-    background-color: #2c2c2c;
+    background-color: #fff;
 
     .sidebar-menu{
       li{
@@ -73,5 +83,16 @@
   }
   .admin-sidebar:after{
     display: none;
+  }
+
+  #admin-footer{
+    position: relative;
+    left: unset;
+    bottom: unset;
+    z-index: 1;
+    width: 100%;
+    color: #fff;
+    font-size: 14px;
+    background-color: #2c2c2c;
   }
 }
