--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -62,6 +62,7 @@
   padding: 5px 15px;
   background-color: #fff;
   font-size: 13px;
+  border-top: solid 1px #eee;
 }
 
 @media (max-width: 767px) {
