--- a/css/style.css
+++ b/css/style.css
@@ -1327,7 +1327,9 @@ span.incdicateur_distance {
   width: 190px;
   position: relative; }
   .admin-sidebar .header .dashboard-label {
-    padding: 8px 15px; }
+    padding: 15px 15px;
+    /*border-bottom: solid 1px #eee;*/
+    margin-bottom: 15px; }
   .admin-sidebar .fa {
     margin-right: 10px;
     display: inline-block;
