--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -8,7 +8,9 @@
 
   .header{
     .dashboard-label{
-      padding: 8px 15px;
+      padding: 15px 15px;
+      /*border-bottom: solid 1px #eee;*/
+      margin-bottom: 15px;
     }
   }
   .fa{
