Ajout de la page Entreprise

--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -4,9 +4,10 @@
 
   .main-body{
     background: none ;
-    flex-grow: 1;
+    width: calc(100% - 190px);
   }
 }
+
 .admin-sidebar{
   width: 190px;
   position: relative;
@@ -115,6 +116,10 @@
 @media (max-width: 767px) {
   .body.admin{
     display: inherit;
+
+    .main-body{
+      width: 100%;
+    }
   }
   .admin-sidebar{
     width: 100%;
