--- a/css/style.css
+++ b/css/style.css
@@ -1389,23 +1389,27 @@ span.incdicateur_distance {
   padding: 10px 15px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 7px #d0d0d0; }
+  box-shadow: 0 2px 7px #d0d0d0;
+  margin-bottom: 20px; }
   .admin-section .section-body .section-title {
     color: #2d2d7b;
     font-weight: 700;
     padding-bottom: 10px;
     border-bottom: solid 2px #eee;
     margin-bottom: 30px; }
-  .admin-section .section-body form label {
+  .admin-section .section-body label {
     display: block;
     color: #af1e27; }
-  .admin-section .section-body form .form_input {
+  .admin-section .section-body .form_input {
     display: block;
     width: 100%;
     padding: 10px;
     border: none;
     background-color: #eee;
     margin-bottom: 20px; }
+  .admin-section .section-body textarea.form_input {
+    resize: none;
+    height: 180px; }
 
 @media (max-width: 767px) {
   .body.admin {
