AJout du timepicker

--- a/css/style.css
+++ b/css/style.css
@@ -1411,6 +1411,28 @@ span.incdicateur_distance {
     resize: none;
     height: 180px; }
 
+.checkbox {
+  margin: 0;
+  padding: 10px 0;
+  background-color: #eee;
+  color: #999 !important;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer; }
+
+.wickedpicker__title {
+  display: none; }
+
+.wickedpicker {
+  height: auto; }
+
+.checkbox.checked {
+  background-color: #af1e27;
+  color: #fff !important; }
+
+.checkbox::selection {
+  background: none; }
+
 @media (max-width: 767px) {
   .body.admin {
     display: inherit; }
