--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -133,12 +133,28 @@
   height: auto;
   width: auto;
 }
+.bootstrap-tagsinput {
+  width: 100%;
+  height: 120px;
+  padding: 10px;
+  border: none;
+  border-radius: 0;
+  background-color: #eee;
+  margin-bottom: 20px;
+}
 .checkbox.checked{
   background-color: $primary-color;
   color: #fff !important;
 }
 .checkbox::selection{
   background: none;
+}
+.label-info{
+  background-color: $primary-color;
+}
+.label{
+  padding: 5px 15px;
+  font-size: 100%;
 }
 @media (max-width: 767px) {
   .body.admin{
@@ -164,7 +180,6 @@
   .admin-sidebar:after{
     display: none;
   }
-
   #admin-footer{
     position: relative;
     left: unset;
