--- a/css/style.css
+++ b/css/style.css
@@ -1476,6 +1476,16 @@ span.incdicateur_distance {
     color: #fff;
     font-size: 14px;
     background-color: #2c2c2c; } }
+.custom-table .thead {
+  border-bottom: solid 2px #eee; }
+  .custom-table .thead .th {
+    padding: 10px;
+    font-weight: 700; }
+.custom-table .tbody .tr .td {
+  padding: 5px 10px; }
+.custom-table .tbody .tr:nth-of-type(even) {
+  background-color: #eee; }
+
 @media (max-width: 1365px) {
   #google-map .etablissements {
     overflow: hidden;
