--- a/css/style.css
+++ b/css/style.css
@@ -1476,15 +1476,22 @@ span.incdicateur_distance {
     color: #fff;
     font-size: 14px;
     background-color: #2c2c2c; } }
-.custom-table .thead {
-  border-bottom: solid 2px #eee; }
-  .custom-table .thead .th {
-    padding: 10px;
-    font-weight: 700; }
-.custom-table .tbody .tr .td {
-  padding: 5px 10px; }
-.custom-table .tbody .tr:nth-of-type(even) {
-  background-color: #eee; }
+.custom-table {
+  padding: 0 15px; }
+  .custom-table .thead {
+    border-bottom: solid 2px #eee;
+    background-color: #393939; }
+    .custom-table .thead .th {
+      padding: 10px;
+      font-weight: 700;
+      color: #fff; }
+  .custom-table .tbody .tr {
+    padding: 5px 15px;
+    border-top: solid 1px #eee; }
+  .custom-table .tbody .tr:first-of-type {
+    border: none; }
+  .custom-table .tbody .tr:nth-of-type(even) {
+    background-color: #f8f8f8; }
 
 @media (max-width: 1365px) {
   #google-map .etablissements {
