--- a/css/_tables.scss
+++ b/css/_tables.scss
@@ -2,11 +2,11 @@
   padding: 0 15px;
   .thead{
     border-bottom: solid 2px #eee;
-    background-color: #393939;
+    background-color: $primary-color;
+    padding: 10px 15px;
 
 
     .th{
-      padding: 10px;
       font-weight: 700;
       color: #fff;
     }
@@ -15,14 +15,29 @@
     .tr{
       padding: 5px 15px;
       border-top: solid 1px #eee;
-      .td{
-      }
     }
     .tr:first-of-type{
       border: none;
     }
     .tr:nth-of-type(even){
       background-color: #f8f8f8;
+    }
+  }
+
+  .checkbox.list{
+    display: inline-block;
+    border-radius: 2px;
+    padding: 2px 5px;
+
+    .fa{
+      opacity: 0;
+    }
+  }
+  .checkbox.list.checked{
+    background-color: #eee;
+    color: #393939 !important;
+    .fa{
+      opacity: 1;
     }
   }
 }
