--- a/css/style.css
+++ b/css/style.css
@@ -1411,6 +1411,19 @@ span.incdicateur_distance {
   .admin-section .section-body textarea.form_input {
     resize: none;
     height: 180px; }
+  .admin-section .section-body .file_input {
+    display: inline-block;
+    width: auto;
+    background-color: #af1e27;
+    cursor: pointer;
+    color: #eee;
+    padding: 10px 15px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+  .admin-section .section-body .file_input:hover {
+    background-color: #8c181f; }
 
 .checkbox {
   margin: 0;
