--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -132,7 +132,7 @@
 
 .checkbox{
   margin: 0;
-  padding: 10px 0;
+  padding: 10px 15px;
   background-color: #eee;
   color: #999 !important;
   border-radius: 5px;
