--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -146,6 +146,10 @@
   height: auto;
   width: auto;
 }
+.old_checkbox{
+  font-weight: normal;
+  color: #333;
+}
 .bootstrap-tagsinput {
   width: 100%;
   height: 120px;
