--- a/css/style.css
+++ b/css/style.css
@@ -1445,6 +1445,10 @@ span.incdicateur_distance {
   height: auto;
   width: auto; }
 
+.old_checkbox {
+  font-weight: normal;
+  color: #333; }
+
 .bootstrap-tagsinput {
   width: 100%;
   height: 120px;
