--- a/css/style.css
+++ b/css/style.css
@@ -1480,6 +1480,11 @@ select.form_input {
   padding: 5px 15px;
   font-size: 100%; }
 
+.form-footer {
+  border-top: solid 2px #eee;
+  padding: 15px 0;
+  margin-top: 25px; }
+
 @media (max-width: 767px) {
   .body.admin {
     display: inherit; }
