--- a/css/_page-login.scss
+++ b/css/_page-login.scss
@@ -5,7 +5,18 @@
   box-shadow: 0 15px 10px -5px rgba(#000, 0.2);
 
   .bg-cover{
-    background: -webkit-linear-gradient(45deg, #fff, #eee);
+    background-image: url('https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg');
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+
+    *{
+      position: relative;
+      z-index: 2;
+    }
+  }
+  .bg-cover:after{
+    @include after(#000, 0.5);
   }
 
   .logo{
@@ -16,7 +27,7 @@
   }
   .col-md-3{
     padding: 40px 15px 100px;
-    color: $gray-6;
+    color: #fff;
   }
   .col-md-9{
     padding: 40px 15px 20px;
