--- a/css/style.css
+++ b/css/style.css
@@ -1205,14 +1205,30 @@ span.incdicateur_distance {
   background-color: #fff;
   box-shadow: 0 15px 10px -5px rgba(0, 0, 0, 0.2); }
   .login-page .bg-cover {
-    background: -webkit-linear-gradient(45deg, #fff, #eee); }
+    background-image: url("https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg");
+    background-size: cover;
+    position: relative;
+    z-index: 0; }
+    .login-page .bg-cover * {
+      position: relative;
+      z-index: 2; }
+  .login-page .bg-cover:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.5); }
   .login-page .logo {
     margin-bottom: 40px; }
   .login-page .page-title {
     margin-bottom: 30px; }
   .login-page .col-md-3 {
     padding: 40px 15px 100px;
-    color: #333333; }
+    color: #fff; }
   .login-page .col-md-9 {
     padding: 40px 15px 20px; }
   .login-page .welcome-message {
@@ -1768,14 +1784,6 @@ select.form_input {
       font-size: 13px; }
       .login-page form .form-title {
         margin-bottom: 50px; }
-      .login-page form .submit_button {
-        background-color: #868686;
-        color: #fff;
-        display: inline-block;
-        margin: 20px 0;
-        margin-right: 15px;
-        border: none;
-        padding: 10px 20px; }
       .login-page form label {
         display: none; }
       .login-page form .form_input {
