--- a/css/_page-login.scss
+++ b/css/_page-login.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 15px 10px -5px rgba(#000, 0.2);
 
   .bg-cover{
-    background-image: url('https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg');
+    background: url('https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg');
     background-size: cover;
     position: relative;
     z-index: 0;
