--- a/css/style.css
+++ b/css/style.css
@@ -1205,7 +1205,7 @@ span.incdicateur_distance {
   background-color: #fff;
   box-shadow: 0 15px 10px -5px rgba(0, 0, 0, 0.2); }
   .login-page .bg-cover {
-    background-image: url("https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg");
+    background: url("https://www.wired.com/wp-content/uploads/2016/11/GoogleMap-1.jpg");
     background-size: cover;
     position: relative;
     z-index: 0; }
