--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -95,16 +95,18 @@
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 7px #d0d0d0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     .section-title{
       color: $dark-primary-color;
       font-weight: 700;
-      padding-bottom: 10px;
       border-bottom: solid 2px #eee;
-      margin-bottom: 30px;
       cursor: pointer;
       @include transition(0.5s);
+    }
+
+    .collapse{
+      margin-top: 30px;
     }
 
       label{
