--- a/css/style.css
+++ b/css/style.css
@@ -1416,18 +1416,18 @@ span.incdicateur_distance {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 7px #d0d0d0;
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
   .admin-section .section-body .section-title {
     color: #2d2d7b;
     font-weight: 700;
-    padding-bottom: 10px;
     border-bottom: solid 2px #eee;
-    margin-bottom: 30px;
     cursor: pointer;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out; }
+  .admin-section .section-body .collapse {
+    margin-top: 30px; }
   .admin-section .section-body label {
     display: block;
     color: #af1e27; }
