--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -78,6 +78,10 @@
   .publicite{
     margin: 30px 0;
     text-align: center;
+
+    img{
+      margin: 0 auto;
+    }
     .placeholder{
       height: 300px;
       width: 92%;
