--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -50,6 +50,10 @@
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
+
+        img{
+          height: 100%;
+        }
       }
       .event_date{
         background-color: $primary-color;
