--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -44,17 +44,13 @@
       padding-bottom: 30px;
 
       .article_picture_frame{
-        height: 225px;
+        height: 180px;
         margin: 0 auto;
-        overflow: hidden;/*
+        overflow: hidden;
         display: flex;
         align-items: center;
-        justify-content: center;*/
+        justify-content: flex-start;
         margin-bottom: 5px;
-
-        img{
-          height: 100%;
-        }
       }
       .event_date{
         background-color: $primary-color;
