--- a/css/style.css
+++ b/css/style.css
@@ -866,16 +866,13 @@ footer#main-footer {
   padding-left: 17px;
   padding-bottom: 30px; }
   #page-evenements .event_list .article .article_picture_frame {
-    height: 225px;
+    height: 180px;
     margin: 0 auto;
     overflow: hidden;
-                 /*
-display: flex;
-align-items: center;
-justify-content: center;*/
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     margin-bottom: 5px; }
-    #page-evenements .event_list .article .article_picture_frame img {
-      height: 100%; }
   #page-evenements .event_list .article .event_date {
     background-color: #af1e27;
     color: #f8f8f8;
