--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -126,16 +126,16 @@
       padding-bottom: 30px;
 
       .article_picture_frame{
-        height: 225px;
+        height: 180px;
         overflow: hidden;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         margin-bottom: 5px;
       }
       .event_date{
-        background-color: $accent-color;
-        color: $dark-primary-color;
+        background-color: $primary-color;
+        color: #fff;
         padding: 2px 10px;
         display: inline-block;
         text-align: center;
