--- a/css/style.css
+++ b/css/style.css
@@ -707,7 +707,7 @@ header {
         float: left; }
       .sidebar .widget .widget-link-list .list-item .details_etablissement {
         float: right;
-        height: 80px;
+        height: 55px;
         width: 70%;
         padding: 5px;
         font-size: 12px;
@@ -1102,15 +1102,15 @@ footer#main-footer {
   padding-left: 17px;
   padding-bottom: 30px; }
   .page-etablissement .event_list .article .article_picture_frame {
-    height: 225px;
+    height: 180px;
     overflow: hidden;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin-bottom: 5px; }
   .page-etablissement .event_list .article .event_date {
-    background-color: #df8e00;
-    color: #2d2d7b;
+    background-color: #af1e27;
+    color: #fff;
     padding: 2px 10px;
     display: inline-block;
     text-align: center;
