--- a/css/style.css
+++ b/css/style.css
@@ -1238,7 +1238,8 @@ span.incdicateur_distance {
     top: 0;
     background: rgba(0, 0, 0, 0.5); }
   .login-page .logo {
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+    text-align: center; }
   .login-page .page-title {
     margin-bottom: 30px; }
   .login-page .col-md-3 {
