--- a/css/_general.scss
+++ b/css/_general.scss
@@ -594,18 +594,20 @@ end of categories carousel
     align-items: center;
     .content{
       width: 70%;
+      background-color: rgba(#fff, 0.8);
     }
 
     .h1{
       font-size: 10em;
       font-weight: 700;
+      color: $dark-primary-color;
     }
     .h3{
       font-size: 18px;
     }
 
     .button-large{
-      background-color: $gray-3;
+      background-color: $primary-color;
       color: #fff;
       display: inline-block;
       margin: 20px 0;
