--- a/css/style.css
+++ b/css/style.css
@@ -467,14 +467,16 @@ end of categories carousel
   display: flex;
   align-items: center; }
   .page-404 .container .content {
-    width: 70%; }
+    width: 70%;
+    background-color: rgba(255, 255, 255, 0.8); }
   .page-404 .container .h1 {
     font-size: 10em;
-    font-weight: 700; }
+    font-weight: 700;
+    color: #2d2d7b; }
   .page-404 .container .h3 {
     font-size: 18px; }
   .page-404 .container .button-large {
-    background-color: #868686;
+    background-color: #af1e27;
     color: #fff;
     display: inline-block;
     margin: 20px 0;
