--- a/css/_page-evenements.scss
+++ b/css/_page-evenements.scss
@@ -48,8 +48,8 @@
         margin: 0 auto;
         overflow: hidden;
         display: flex;
-        align-items: center;
-        justify-content: flex-start;
+        align-items: flex-start;
+        justify-content: center;
         margin-bottom: 5px;
       }
       .event_date{
@@ -121,7 +121,7 @@
           height: 320px;
           overflow: hidden;
           display: flex;
-          align-items: center;
+          align-items: flex-start;
           justify-content: center;
           margin-bottom: 5px;
           position: relative;
